added vending machine routes
